Fixed Layout Issue

--- a/src/components/layout/Header/components/TopBar/MainHeaderTopBar/MainHeaderTopBar.module.scss
+++ b/src/components/layout/Header/components/TopBar/MainHeaderTopBar/MainHeaderTopBar.module.scss
@@ -119,6 +119,7 @@
     transition: all 0.4s ease;
     visibility: visible;
     opacity: 1;
+    z-index: 999;
   }
 
   .angleIcon {
